--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,17 @@
 body {
     color: #222222;
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 /* NAVBAR */
 nav a {
     color: #776c65;
+    font-size: 14px;
+
+    transition: color 100ms linear;
+}
+
+nav a:hover {
+    color: #222222;
 }
 
 /* JUMBOTRON */
@@ -16,9 +23,90 @@ nav a {
     background-size: cover;
 }
 
-.jumbotron h1,
+h1,
+h2 {
+    font-family: 'DM Serif Display', sans-serif;
+}
+
+h1,
 .jumbotron p {
     text-shadow: 0 0 10px rgba(0, 0, 0, 1);
+}
+
+.hero-btn {
+    color: #fff;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 3px;
+    padding: 15px 30px;
+    background-color: #d9480f;
+
+    transition: all 200ms linear;
+}
+
+.hero-btn:hover {
+    background-color: #f76707;
+}
+
+.hero-btn i {
+    vertical-align: middle;
+}
+
+/* PRODUCT CARD */
+.card,
+.card-body {
+    cursor: pointer;
+    max-width: 300px;
+}
+
+.card {
+    position: relative;
+}
+
+.card-btn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    left: 10px;
+
+    opacity: 0;
+    padding: 15px 0;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    border: 1px solid;
+    border-radius: 3px;
+    letter-spacing: 1.5px;
+    background-color: #fff;
+    text-transform: uppercase;
+
+    transition: color 200ms linear, background-color 200ms linear;
+}
+
+.card:hover .card-btn {
+    opacity: 1;
+}
+
+.card-btn:hover {
+    color: #fff;
+    background-color: #f76707;
+}
+
+.card-title {
+    font-weight: 900;
+}
+
+.card-brand {
+    text-transform: uppercase;
+}
+
+.card-price {
+    font-weight: 600;
+    padding: 0px 8px;
+    border-radius: 50px;
+    max-width: fit-content;
+    border: 1px solid #adb5bd;
 }
 
 /* FOOTER */
