--- a/styles/back-office.css
+++ b/styles/back-office.css
@@ -1,7 +1,8 @@
 body {
     color: #222222;
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
+
 /* NAVBAR */
 nav a {
     color: #776c65;
@@ -9,13 +10,55 @@ nav a {
 
 /* JUMBOTRON */
 .jumbotron {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
         url('https://images.unsplash.com/photo-1646215993316-c98f642303ce?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-.jumbotron h1 {
+h1 {
     text-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    font-family: 'DM Serif Display', sans-serif;
+}
+
+/* MAIN CONTENT */
+main {
+    background-color: #e7f5ff;
+}
+
+.section-title {
+    font-weight: 600;
+    letter-spacing: -0.5px;
+}
+
+.form-btn {
+    color: #fff;
+    border: none;
+    font-size: 14px;
+    padding: 10px 20px;
+    border-radius: 3px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    background-color: #000;
+}
+
+/* TABLE */
+table th {
+    text-wrap: nowrap;
+}
+
+.table-body-cell:nth-of-type(3) {
+    overflow: hidden;
+    max-width: 300px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.table-body-cell:nth-of-type(4) {
+    line-clamp: 2;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
