--- a/styles/back-office.css
+++ b/styles/back-office.css
@@ -8,6 +8,12 @@ nav a {
     color: #776c65;
 }
 
+.user-role {
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
 /* JUMBOTRON */
 .jumbotron {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
@@ -48,17 +54,34 @@ table th {
     text-wrap: nowrap;
 }
 
-.table-body-cell:nth-of-type(3) {
+td {
+    vertical-align: middle;
+}
+
+td:nth-of-type(3) {
     overflow: hidden;
     max-width: 300px;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.table-body-cell:nth-of-type(4) {
-    line-clamp: 2;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+td:nth-of-type(6),
+td:nth-of-type(7) {
+    max-width: 30px;
+    text-align: center;
+}
+
+.delete-btn {
+    color: #fff;
+    font-size: 22px;
+    cursor: pointer;
+    padding: 8px 10px;
+    border-radius: 3px;
+    background-color: #f03e3e;
+
+    transition: all 100ms linear;
+}
+
+.delete-btn:hover {
+    background-color: #c92a2a;
 }
