--- a/styles/back-office.css
+++ b/styles/back-office.css
@@ -72,7 +72,8 @@ td {
     vertical-align: middle;
 }
 
-td:nth-of-type(3) {
+td:nth-of-type(3),
+td:nth-of-type(4) {
     overflow: hidden;
     max-width: 300px;
     white-space: nowrap;
@@ -137,9 +138,7 @@ td:nth-of-type(7) {
 
 #editProductForm label {
     font-weight: 600;
-    padding-left: 5px;
     margin-bottom: 3px;
-    border-left: 3px solid #495057;
 }
 
 #productID {
