--- a/styles/product-details.css
+++ b/styles/product-details.css
@@ -1,8 +1,3 @@
-html,
-body {
-    overflow-x: hidden;
-}
-
 body {
     color: #222222;
     font-family: 'Lato', sans-serif;
@@ -65,84 +60,18 @@ h1,
     vertical-align: middle;
 }
 
-/* PRODUCT CARD */
-.card img {
-    border-radius: 3px;
-}
-
-.card-body a {
-    color: #fff;
-    padding: 0 5px;
-    margin-left: 5px;
-    border-radius: 50px;
+/* PRODUCT */
+.home-page-link {
+    color: #222222;
+    width: fit-content;
     text-decoration: none;
-    display: inline-block;
-    background-color: #f76707;
 
-    transition: all 100ms linear;
+    transition: all 100ms ease-in-out;
 }
 
-.card-body a:hover {
-    transform: translateY(3px);
-    box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.3);
-}
-
-.card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
-
-    height: 500px;
-    padding: 20px;
-    background-color: #ffe8cc;
-}
-
-.card-btn {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    left: 10px;
-
-    opacity: 0;
-    padding: 15px 0;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    border: 1px solid;
-    border-radius: 3px;
-    letter-spacing: 1.5px;
-    background-color: #fff;
-    text-transform: uppercase;
-
-    transition: color 200ms linear, background-color 200ms linear;
-}
-
-.card:hover .card-btn {
-    opacity: 1;
-}
-
-.card-btn:hover {
-    color: #fff;
-    background-color: #f76707;
-}
-
-.card-title {
-    font-weight: 900;
-}
-
-.card-brand {
-    text-transform: uppercase;
-}
-
-.card-price {
-    display: inline;
-    font-weight: 600;
-    padding: 0px 8px;
-    border-radius: 50px;
-    max-width: fit-content;
-    border: 1px solid #adb5bd;
+.home-page-link:hover {
+    color: #776c65;
+    text-decoration: underline;
 }
 
 /* FOOTER */
