--- a/styles/main.css
+++ b/styles/main.css
@@ -5,37 +5,46 @@ body {
 
 body {
     color: #222222;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+.top-banner {
+    font-size: 14px;
 }
 
 .user-role {
-    font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
 }
 
 /* NAVBAR */
 nav a {
-    color: #776c65;
+    color: #222222;
     font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
 
-    transition: color 100ms linear;
+    transition: all 100ms ease-in-out;
 }
 
 nav a:hover {
-    color: #222222;
+    color: #3b3b3b;
+    transform: translateY(2px);
+}
+
+nav a:active {
+    color: #545454;
 }
 
 /* JUMBOTRON */
 .jumbotron {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
         url('https://images.unsplash.com/photo-1532079563951-0c8a7dacddb3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-h1,
 h2 {
     font-family: 'DM Serif Display', sans-serif;
 }
@@ -58,7 +67,12 @@ h1,
 }
 
 .hero-btn:hover {
-    background-color: #f76707;
+    background-color: #f06128;
+    transform: translateX(10px);
+}
+
+.hero-btn:active {
+    background-color: #f38458;
 }
 
 .hero-btn i {
@@ -66,27 +80,6 @@ h1,
 }
 
 /* PRODUCT CARD */
-.card img {
-    border-radius: 3px;
-}
-
-.card-body a {
-    color: #fff;
-    padding: 0 5px;
-    margin-left: 5px;
-    border-radius: 50px;
-    text-decoration: none;
-    display: inline-block;
-    background-color: #f76707;
-
-    transition: all 100ms linear;
-}
-
-.card-body a:hover {
-    transform: translateY(3px);
-    box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.3);
-}
-
 .card {
     display: flex;
     align-items: center;
@@ -97,6 +90,10 @@ h1,
     height: 500px;
     padding: 20px;
     background-color: #ffe8cc;
+}
+
+.card img {
+    border-radius: 3px;
 }
 
 .card-btn {
@@ -128,6 +125,10 @@ h1,
     background-color: #f76707;
 }
 
+.card-btn:active {
+    background-color: #f98639;
+}
+
 .card-title {
     font-weight: 900;
 }
@@ -138,6 +139,7 @@ h1,
 
 .card-price {
     display: inline;
+    font-size: 19px;
     font-weight: 600;
     padding: 0px 8px;
     border-radius: 50px;
@@ -145,9 +147,53 @@ h1,
     border: 1px solid #adb5bd;
 }
 
-/* FOOTER */
-.list-title {
+.card-details {
     color: #fff;
+    padding: 2px 6px;
+    margin-left: 5px;
+    border-radius: 50px;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #f76707;
+
+    transition: all 100ms linear;
+}
+
+.card-details:hover {
+    transform: translateY(3px);
+    box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.3);
+}
+
+.card-details:active {
+    background-color: #f98639;
+}
+
+/* FOOTER */
+footer {
+    background-color: #e6e6e6;
+}
+
+.footer-logo {
+    color: #000;
+    font-size: 200px;
+    width: fit-content;
+    padding: 20px 40px;
+    border-radius: 3px;
+    letter-spacing: -20px;
+    border: 1px solid #000;
+}
+
+.footer-logo span {
+    position: absolute;
+    right: 40px;
+    top: 65px;
+
+    font-size: 35px;
+}
+
+.list-title {
+    color: #000;
+    font-weight: 900;
     font-size: 21.5px;
     font-family: 'DM Serif Display', sans-serif;
 }
@@ -159,18 +205,38 @@ h1,
 .list-subtitle,
 .list-subtitle ~ ul > li,
 footer a {
-    color: #fff;
+    color: #000;
     font-size: 17px;
 }
 
 footer a {
-    font-weight: 900;
+    font-weight: 500;
     text-decoration: none;
-    letter-spacing: 0.1px;
+    display: inline-block;
 
-    transition: color 100ms linear;
+    transition: all 200ms linear;
 }
 
 footer a:hover {
-    color: #ffc078;
+    font-weight: 700;
+    transform: translateX(5px);
+}
+
+.subscribe-btn {
+    border: none;
+    color: #fff;
+    padding: 10px 0;
+    font-size: 20px;
+    border-radius: 3px;
+    background-color: #d9480f;
+
+    transition: all 100ms linear;
+}
+
+.subscribe-btn:hover {
+    background-color: #f06128;
+}
+
+.subscribe-btn:active {
+    background-color: #f38458;
 }
