--- a/styles/product-details.css
+++ b/styles/product-details.css
@@ -1,82 +1,115 @@
 body {
     color: #222222;
-    font-family: 'Lato', sans-serif;
+    background-color: #240c02;
+    font-family: 'Poppins', sans-serif;
+}
+
+h2 {
+    font-family: 'DM Serif Display', sans-serif;
+}
+
+.top-banner {
+    font-size: 14px;
 }
 
 .user-role {
-    font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
 }
 
 /* NAVBAR */
 nav a {
-    color: #776c65;
+    color: #222222;
     font-size: 14px;
-
-    transition: color 100ms linear;
-}
-
-nav a:hover {
-    color: #222222;
-}
-
-/* JUMBOTRON */
-.jumbotron {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url('https://images.unsplash.com/photo-1532079563951-0c8a7dacddb3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-h1,
-h2 {
-    font-family: 'DM Serif Display', sans-serif;
-}
-
-h1,
-.jumbotron p {
-    text-shadow: 0 0 10px rgba(0, 0, 0, 1);
-}
-
-.hero-btn {
-    color: #fff;
-    border: none;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 3px;
-    padding: 15px 30px;
-    background-color: #d9480f;
-
-    transition: all 200ms linear;
-}
-
-.hero-btn:hover {
-    background-color: #f76707;
-}
-
-.hero-btn i {
-    vertical-align: middle;
-}
-
-/* PRODUCT */
-.home-page-link {
-    color: #222222;
-    width: fit-content;
-    text-decoration: none;
+    font-weight: 500;
+    display: inline-block;
 
     transition: all 100ms ease-in-out;
 }
 
+nav a:hover {
+    color: #3b3b3b;
+    transform: translateY(2px);
+}
+
+nav a:active {
+    color: #545454;
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 100vh;
+}
+
+/* PRODUCT */
+#productContainer {
+    display: flex;
+    justify-content: center;
+
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+.cover-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home-page-link {
+    color: #fff;
+    font-size: 18px;
+    padding: 0 10px;
+    font-weight: 500;
+    margin-top: 20px;
+    width: fit-content;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: #d9480f;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+
+    transition: all 150ms ease-in-out;
+}
+
 .home-page-link:hover {
-    color: #776c65;
-    text-decoration: underline;
+    transform: scale(1.01);
+    background-color: #f06128;
+}
+
+.home-page-link:active {
+    background-color: #f38458;
 }
 
 /* FOOTER */
+footer {
+    background-color: #e6e6e6;
+}
+
+.footer-logo {
+    color: #000;
+    font-size: 200px;
+    width: fit-content;
+    border-radius: 3px;
+    padding: 20px 40px;
+    letter-spacing: -20px;
+    border: 1px solid #000;
+}
+
+.footer-logo span {
+    position: absolute;
+    right: 40px;
+    top: 65px;
+
+    font-size: 35px;
+}
+
 .list-title {
-    color: #fff;
+    color: #000;
+    font-weight: 900;
     font-size: 21.5px;
     font-family: 'DM Serif Display', sans-serif;
 }
@@ -88,18 +121,38 @@ h1,
 .list-subtitle,
 .list-subtitle ~ ul > li,
 footer a {
-    color: #fff;
+    color: #000;
     font-size: 17px;
 }
 
 footer a {
-    font-weight: 900;
+    font-weight: 500;
     text-decoration: none;
-    letter-spacing: 0.1px;
+    display: inline-block;
 
-    transition: color 100ms linear;
+    transition: all 200ms linear;
 }
 
 footer a:hover {
-    color: #ffc078;
+    font-weight: 700;
+    transform: translateX(5px);
+}
+
+.subscribe-btn {
+    border: none;
+    color: #fff;
+    padding: 10px 0;
+    font-size: 20px;
+    border-radius: 3px;
+    background-color: #d9480f;
+
+    transition: all 100ms linear;
+}
+
+.subscribe-btn:hover {
+    background-color: #f06128;
+}
+
+.subscribe-btn:active {
+    background-color: #f38458;
 }
