--- a/styles/product-details.css
+++ b/styles/product-details.css
@@ -1,6 +1,5 @@
 body {
     color: #222222;
-    background-color: #240c02;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -10,6 +9,7 @@ h2 {
 
 .top-banner {
     font-size: 14px;
+    z-index: 9999999999;
 }
 
 .user-role {
@@ -60,14 +60,25 @@ main {
     justify-content: center;
 }
 
+.btns-container {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+
+    margin-top: 20px;
+}
+
+.home-page-link,
+.add-to-cart-btn {
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 3px;
+}
+
 .home-page-link {
     color: #fff;
-    font-size: 18px;
     padding: 0 10px;
-    font-weight: 500;
-    margin-top: 20px;
     width: fit-content;
-    border-radius: 5px;
     text-decoration: none;
     background-color: #d9480f;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
@@ -82,6 +93,19 @@ main {
 
 .home-page-link:active {
     background-color: #f38458;
+}
+
+.add-to-cart-btn {
+    background-color: #fff;
+    border: 1px solid #000;
+}
+
+.add-to-cart-btn:hover {
+    background-color: #f2f2f2;
+}
+
+.add-to-cart-btn:active {
+    background-color: #e6e6e6;
 }
 
 /* FOOTER */
